# nanochat

./: pyproject.toml
dev/: RAW_COMPOSITIONAL_MINIMAL_PLAN.md
nanochat/: checkpoint_manager.py  cobpe_tokenizer_train.py  compositional.py  compositional_bpb.py  compositional_rust.py  core_eval.py  core_eval_utils.py  dataloader.py  dataloader_utils.py  engine.py  gpt.py  loss_eval.py  optim.py  token_codec.py  tokenizer.py  tokenizer_backend.py  tokenizer_utils.py
nanochat/cobpe/: __init__.py  bpb.py  data.py  eval.py  model.py  runtime.py  tokenizer.py  training.py
runs/: speedrun_cobpe.sh
rust_ext/compositional_runtime/: Cargo.toml
rust_ext/compositional_runtime/src/: lib.rs
scripts/: base_eval.py  base_train.py  chat_cli.py  chat_eval.py  chat_rl.py  chat_web.py  tok_eval.py  tok_train.py
tests/: test_compositional.py  test_core_eval.py  test_engine.py  test_gpt_compositional.py  test_loss_eval.py  test_optim.py  test_tokenizer_build.py
