[package]
name = "nanochat_compositional_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "nanochat_compositional_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = { version = "0.22", default-features = false, features = ["fancy-regex"] }
tiktoken-rs = "0.11.0"
rustc-hash = "1.1.0"
rayon = "1.10.0"
